# cppapi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  codeql.yml
doc/: FilterExpressions.md
src/: CMakeLists.txt  README.md  README.txt  sttp.cpp.sln  sttp.cpp.sln.DotSettings
src/lib/: CommonTypes.cpp  CommonTypes.h  Convert.cpp  Convert.h  EndianConverter.cpp  EndianConverter.h  ManualResetEvent.cpp  ManualResetEvent.h  Nullable.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  Timer.cpp  Timer.h  Version.h  pugixml.cpp  pugixml.hpp  sttp.cpp.suppress  sttp.cpp.vcxproj  sttp.cpp.vcxproj.filters
src/lib/Common/: CommonTypes.cpp  CommonTypes.h  Convert.cpp  Convert.h  EndianConverter.cpp  Nullable.h
src/lib/Data/: DataColumn.cpp  DataRow.cpp  DataSet.cpp  DataTable.cpp  DataTable.h
src/lib/FilterExpressions/: ExpressionTree.cpp  ExpressionTree.h  FilterExpressionParser.cpp
src/lib/Transport/: CompactMeasurement.cpp  DataPublisher.cpp  DataSubscriber.cpp  DataSubscriber.h  PublisherInstance.h  SignalIndexCache.cpp  SignalIndexCache.h  SubscriberInstance.cpp  SubscriberInstance.h  TSSCDecoder.cpp  TSSCDecoder.h  TSSCEncoder.cpp  TSSCEncoder.h  TransportTypes.cpp  TransportTypes.h  Version.h
src/lib/boost/: use_awaitable.hpp
src/lib/common/: CommonTypes.h  Convert.cpp  Convert.h  EndianConverter.cpp  EndianConverter.h  Nullable.h  ThreadSafeQueue.h  Timer.h
src/lib/data/: DataColumn.cpp  DataColumn.h  DataRow.cpp  DataRow.h  DataSet.cpp  DataSet.h  DataTable.cpp  DataTable.h  README.md
src/lib/filterexpressions/: CompileGrammar.bat  ExpressionTree.cpp  ExpressionTree.h  FilterExpressionParser.cpp  FilterExpressionParser.h  FilterExpressionSyntax.g4  FilterExpressionSyntax.interp  FilterExpressionSyntaxBaseListener.cpp  FilterExpressionSyntaxBaseListener.h  FilterExpressionSyntaxLexer.cpp  FilterExpressionSyntaxLexer.h  FilterExpressionSyntaxLexer.interp  FilterExpressionSyntaxListener.cpp  FilterExpressionSyntaxListener.h  FilterExpressionSyntaxParser.cpp  FilterExpressionSyntaxParser.h  FilterExpressions.h
src/lib/filterexpressions/antlr4-runtime/: ANTLRErrorStrategy.h  Lexer.cpp  NoViableAltException.cpp  NoViableAltException.h  Parser.cpp  RuleContext.h  antlr4-common.h  antlr4-runtime.h
src/lib/filterexpressions/antlr4-runtime/atn/: ATNConfig.h  ATNConfigSet.h  AtomTransition.h  ParserATNSimulator.h  PredicateTransition.h  PredictionContext.cpp  ProfilingATNSimulator.cpp
src/lib/filterexpressions/antlr4-runtime/support/: StringUtils.h
src/lib/filterexpressions/antlr4-runtime/tree/pattern/: ParseTreeMatch.h  ParseTreePattern.h
src/lib/transport/: ActiveMeasurementsSchema.cpp  ActiveMeasurementsSchema.h  CompactMeasurement.cpp  CompactMeasurement.h  Constants.cpp  Constants.h  DataPublisher.cpp  DataPublisher.h  DataSubscriber.cpp  DataSubscriber.h  MetadataSchema.cpp  MetadataSchema.h  PublisherInstance.cpp  PublisherInstance.h  RoutingTables.cpp  RoutingTables.h  SignalIndexCache.cpp  SignalIndexCache.h  SubscriberConnection.cpp  SubscriberConnection.h  SubscriberConnector.cpp  SubscriberConnector.h  SubscriberInstance.cpp  SubscriberInstance.h  SubscriptionInfo.cpp  SubscriptionInfo.h  TransportTypes.cpp  TransportTypes.h  Version.h
src/lib/transport/tssc/: TSSCDecoder.cpp  TSSCDecoder.h  TSSCEncoder.cpp  TSSCEncoder.h  TSSCPointMetadata.cpp  TSSCPointMetadata.h
src/lib/utf8/: checked.h
src/samples/AdvancedPublish/: AdvancedPublish.cpp  AdvancedPublish.vcxproj  GenHistory.cpp  GenHistory.h  TemporalSubscriber.cpp  TemporalSubscriber.h
src/samples/AdvancedSubscribe/: AdvancedSubscribe.cpp  AdvancedSubscribe.vcxproj
src/samples/AverageFrequencyCalculator/: AverageFrequencyCalculator.cpp  AverageFrequencyCalculator.vcxproj
src/samples/DynamicMetadataPublish/: DynamicMetadataPublish.cpp  DynamicMetadataPublish.vcxproj  PublisherHandler.cpp  PublisherHandler.h
src/samples/FilterExpressionTests/: FilterExpressionTests.cpp  FilterExpressionTests.vcxproj
src/samples/InstancePublish/: InstancePublish.cpp  InstancePublish.vcxproj  PublisherHandler.cpp  PublisherHandler.h
src/samples/InstanceSubscribe/: InstanceSubscribe.cpp  InstanceSubscribe.vcxproj  SubscriberHandler.cpp  SubscriberHandler.h
src/samples/InteropTest/: InteropSubscriber-cpp.csv  InteropSubscriber.csv  InteropTest.cpp  InteropTest.vcxproj  SubscriberHandler.cpp  SubscriberHandler.h
src/samples/LatencyTest/: LatencyTest.cpp  LatencyTest.vcxproj  SubscriberHandler.cpp  SubscriberHandler.h
src/samples/ReversePublish/: PublisherHandler.cpp  PublisherHandler.h  ReversePublish.cpp  ReversePublish.vcxproj
src/samples/ReverseSubscribe/: ReverseSubscribe.cpp  ReverseSubscribe.vcxproj  SubscriberHandler.cpp  SubscriberHandler.h
src/samples/SimplePublish/: SimplePublish.cpp  SimplePublish.vcxproj
src/samples/SimpleSubscribe/: SimpleSubscribe.cpp  SimpleSubscribe.vcxproj
